--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
-            <img class="lado" src="imagens/curso-em-video-cor.png" alt="Curso em Video">
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML5" >
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi velit quam impedit. Error, quae? Atque, ut debitis consequuntur porro molestias laudantium asperiores aliquam ullam, optio eaque culpa repellat? Expedita, veniam.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS" >
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur molestiae veritatis temporibus vero. Autem cumque quaerat quam sunt. Doloremque facilis expedita eveniet quo nobis voluptates magni officiis et perspiciatis veniam!
             </p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
